[tool.poetry]
name = "weather_app"
version = "0.1.0"
description = "Simple Weather App applying DDD"
authors = ["Pedro Lopez Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pymongo = "^4.2.0"
pyupgrade = "^3.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
yapf = "^0.32.0"
toml = "^0.10.2"
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0"
pylint = "^2.15.3"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
doublex = { git = "https://github.com/davidvilla/python-doublex", rev = "0ccbe65c8574169d8b723c1ef29bcbe3f2e98c20" }
expects = "^0.9.0"
doublex-expects = "^0.7.1"
requests = "^2.31.0"

[tool.flake8]
ignore= ["E501", "E124","E203", "W291", "W503", "W504", "E302", "E303", "E251", "E125"]

[tool.yapf]
based_on_style = "google"

[tool.pyright]
venvPath="/home/pmareke/.cache/pypoetry/virtualenvs"
venv="aoc-7x1CD7iW-py3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
