[tool.poetry]
name = "weather_app"
version = "0.1.0"
description = "Simple Weather App applying DDD"
authors = ["Pedro Lopez Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pymongo = "^4.6.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"
black = "^24.8.0"
mypy = "^1.11.2"
pyupgrade = "^3.2.0"
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0"
toml = "^0.10.2"
pylint = "^2.15.3"
doublex = { git = "https://github.com/davidvilla/python-doublex", rev = "0ccbe65c8574169d8b723c1ef29bcbe3f2e98c20" }
expects = "^0.9.0"
doublex-expects = "^0.7.1"
requests = "^2.32.0"

[tool.flake8]
ignore= ["E501", "E124","E203", "W291", "W503", "W504", "E302", "E303", "E251", "E125"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
